<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">



    <fragment
        android:id="@+id/nav_gallery"
        android:name="fr.eseo.mb.android.posterate.ui.projets.ProjetsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_projets" />

    <fragment
        android:id="@+id/nav_jury"
        android:name="fr.eseo.mb.android.posterate.ui.jury.JuryFragment"
        android:label="@string/menu_jury"
        tools:layout="@layout/fragment_jury" />


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="fr.eseo.mb.android.posterate.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_selection"
        android:name="fr.eseo.mb.android.posterate.ui.selection.selectionFragment"
        android:label="@string/menu_selection"
        tools:layout="@layout/fragment_selection" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="fr.eseo.mb.android.posterate.ui.notes.NoteFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_selection" />
</navigation>